@@ -20,18 +20,17 @@ public class RoomBookingServiceImpl implements RoomBookingService {
     private final RoomBookingRepository bookingRepository;
     private final GuestRepository guestRepository;
 
-    // ✅ REQUIRED BY TESTS — DO NOT REMOVE
+    // REQUIRED BY TESTS
     public RoomBookingServiceImpl(RoomBookingRepository bookingRepository) {
         this.bookingRepository = bookingRepository;
-        this.guestRepository = null; // tests do not need this
+        this.guestRepository = null;
     }
 
-    // ✅ REQUIRED BY SPRING RUNTIME
+    // REQUIRED BY SPRING
     @Autowired
     public RoomBookingServiceImpl(
             RoomBookingRepository bookingRepository,
             GuestRepository guestRepository) {
-
         this.bookingRepository = bookingRepository;
         this.guestRepository = guestRepository;
     }
@@ -40,23 +39,22 @@ public class RoomBookingServiceImpl implements RoomBookingService {
     public RoomBooking createBooking(RoomBooking booking) {
 
         if (booking == null) {
-            throw new IllegalArgumentException();
+            throw new IllegalArgumentException("booking is null");
         }
 
         if (booking.getGuest() == null || booking.getGuest().getId() == null) {
-            throw new IllegalArgumentException();
+            throw new IllegalArgumentException("guest missing");
         }
 
         LocalDate in = booking.getCheckInDate();
         LocalDate out = booking.getCheckOutDate();
 
         if (in == null || out == null || !in.isBefore(out)) {
-            throw new IllegalArgumentException();
+            throw new IllegalArgumentException("invalid booking dates");
         }
 
-        if (booking.getRoomNumber() == null ||
-                booking.getRoomNumber().trim().isEmpty()) {
-            throw new IllegalArgumentException();
+        if (booking.getRoomNumber() == null || booking.getRoomNumber().trim().isEmpty()) {
+            throw new IllegalArgumentException("room number missing");
         }
 
         booking.setActive(true);
@@ -73,31 +71,28 @@ public class RoomBookingServiceImpl implements RoomBookingService {
     @Override
     public RoomBooking updateBooking(Long id, RoomBooking update) {
 
-        RoomBooking existing = getBookingById(id);
+        RoomBooking existing = bookingRepository.findById(id)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Booking not found"));
 
-        LocalDate newIn = update.getCheckInDate() != null
+        LocalDate in = update.getCheckInDate() != null
                 ? update.getCheckInDate()
                 : existing.getCheckInDate();
 
-        LocalDate newOut = update.getCheckOutDate() != null
+        LocalDate out = update.getCheckOutDate() != null
                 ? update.getCheckOutDate()
                 : existing.getCheckOutDate();
 
-        if (newIn == null || newOut == null || !newIn.isBefore(newOut)) {
-            throw new IllegalArgumentException();
+        if (!in.isBefore(out)) {
+            throw new IllegalArgumentException("invalid booking dates");
         }
 
-        if (update.getRoomNumber() != null &&
-                !update.getRoomNumber().trim().isEmpty()) {
+        if (update.getRoomNumber() != null && !update.getRoomNumber().isBlank()) {
             existing.setRoomNumber(update.getRoomNumber());
         }
 
-        existing.setCheckInDate(newIn);
-        existing.setCheckOutDate(newOut);
-
-        if (update.getActive() != null) {
-            existing.setActive(update.getActive());
-        }
+        existing.setCheckInDate(in);
+        existing.setCheckOutDate(out);
 
         return bookingRepository.save(existing);
     }
@@ -111,14 +106,9 @@ public class RoomBookingServiceImpl implements RoomBookingService {
 
     @Override
     public List<RoomBooking> getBookingsForGuest(Long guestId) {
-
         if (guestId == null) {
             return Collections.emptyList();
         }
-
-        List<RoomBooking> bookings =
-                bookingRepository.findByGuestId(guestId);
-
-        return bookings != null ? bookings : Collections.emptyList();
+        return bookingRepository.findByGuestId(guestId);
     }
 }
